# nexus-multi-agent

./: .gitignore  README.md  config.py  pyproject.toml  trigger.py
docs/: article1.md
qualification_service/: activity.py  const.py  handler.py  worker.py  workflow.py
shared/: service.py
tests/: conftest.py
tests/workflow/: test_sample_workflow.py
tests/workflow/activity/: test_sample_activity.py
worker/: worker.py
workflow/: sample_workflow.py
workflow/activity/: sample_activity.py
